--- a/Areas/User/Views/BookTicket/PaymentSuccess.cshtml
+++ b/Areas/User/Views/BookTicket/PaymentSuccess.cshtml
@@ -1,18 +1,221 @@
-﻿
+﻿@model CinemaWeb.Areas.User.Controllers.UserAccountController
+
 @{
-    Layout = null;
+    CinemaWeb.Models.user currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["user"];
 }
 
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>PaymentSuccess</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png" />
+    <title>Ohayou Cinema</title>
+    <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css" />
+    <link rel="stylesheet" href="~/Areas/User/assets/css/paysuccessstyle.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div> 
-        <h2 class="text-danger">@TempData["Message"]</h2>
+    <div class="header">
+        <div class="container-fluid  p-4">
+            <div class="row align-items-center">
+                <div class="col-md-2 px-5 py-1">
+                    <a href="/User/UserHome/" class="navbar-brand">
+                        <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-2 buyticket-area">
+                    <a href="/User/BookTicket/BookTicket" class="buyticket-btn btn">
+                        <img src="~/assets/images/subimg/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-gr-1 list-group list-group-horizontal">
+                        <li class="list-group-item movie-area">
+                            Phim
+                            <i class="ti-angle-down down-btn"></i>
+                            <ul class="movie-status list-group">
+                                <li class="movie-sta-text-1 py-1">
+                                    <i class="fa-solid fa-film"></i>
+                                    <a href="#">PHIM ĐANG CHIẾU</a>
+                                </li>
+                                <div class="movie-list py-1">
+                                    <div class="row">
+                                        @if (ViewBag.MovieList != null)
+                                        {
+                                            var count = 0;
+                                            foreach (var movie in ViewBag.MovieList)
+                                            {
+                                                if (movie.movie_status == true && count < 4)
+                                                {
+                                                    <div class="col-md-3 sub-movie-list">
+                                                        <a href="" class="text-dark-emphasis movie-name">
+                                                            <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                                                            <button class="buy-ticket-btn btn">
+                                                                <i class="ti-ticket"></i>
+                                                                Mua vé
+                                                            </button>
+                                                            <span>@movie.title</span>
+                                                        </a>
+                                                    </div>
+                                                    count++;
+                                                }
+                                            }
+                                        }
+                                    </div>
+                                </div>
+
+                                <li class="movie-sta-text-2 py-1">
+                                    <i class="fa-solid fa-film"></i>
+                                    <a href="#">PHIM SẮP CHIẾU</a>
+                                </li>
+                                <div class="movie-list py-1">
+                                    <div class="row">
+                                        @if (ViewBag.MovieList != null)
+                                        {
+                                            var count = 0;
+                                            foreach (var movie in ViewBag.MovieList)
+                                            {
+                                                if (movie.movie_status == false && count < 4)
+                                                {
+                                                    <div class="col-md-3 sub-movie-list">
+                                                        <a href="" class="text-dark-emphasis movie-name">
+                                                            <img src="@movie.url_image" alt="" class="img-fluid img-movie">
+                                                            <button class="buy-ticket-btn btn">
+                                                                <i class="ti-ticket"></i>
+                                                                Mua vé
+                                                            </button>
+                                                            <span>@movie.title</span>
+                                                        </a>
+                                                    </div>
+                                                    count++;
+                                                }
+                                            }
+                                        }
+                                    </div>
+                                </div>
+                            </ul>
+                        </li>
+
+                        <li class="list-group-item cinema-corner text-center">
+                            Góc Điện Ảnh
+                            <i class="ti-angle-down down-btn"></i>
+                            <ul class="sub-list-gr-1 list-group">
+                                <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
+                                <li><a href="#">Diễn viên</a></li>
+                                <li><a href="#">Đạo diễn</a></li>
+                                <li><a href="#">Bình luận phim</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="list-group-item event-list text-center">
+                            Sự Kiện
+                            <i class="ti-angle-down down-btn"></i>
+                            <ul class="sub-list-gr-1 list-group">
+                                <li><a href="#">Ưu đãi</a></li>
+                                <li><a href="#">Phim hay tháng</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="list-group-item ticket-price text-center">
+                            Rạp/Giá vé
+                            <i class="ti-angle-down down-btn"></i>
+                            <ul class="sub-list-gr-1 list-group">
+                                <li><a href="#">Rạp Đà Nẵng</a></li>
+                            </ul>
+
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="col-md-1">
+                    <button class="search-btn btn">
+                        <i class="search-icon ti-search"></i>
+                    </button>
+                </div>
+                <div class="login-area col-md-3">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="show-login js-show-login">
+                                <div class="account-wrapper">
+                                    <img src="~/assets/images/subimg/account.png" alt="" class="img-fluid account-img">
+                                    <ul class="list-group account-list">
+                                        <li class="list-group-item">
+                                            <a href="/User/UserHome/UserProfile">
+                                                <i class="fa-solid fa-id-badge account-icon"></i>
+                                                Tài Khoản
+                                            </a>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <a href="/User/UserHome/HistoryTicket">
+                                                <i class="fa-solid fa-list-ol account-icon"></i>
+                                                Lịch Sử
+                                            </a>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <a href="/Home/SignOut" class="js-logout">
+                                                <i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
+                                                Đăng Xuất
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
+                                <img class="icon" src="~/Areas/User/assets/images/logo/logomini.png" alt="">
+                                @currentUser.full_name
+                            </div>
+                            <div class="row1" style="font-size: small; font-weight: 500;">
+                                <img class="icon" src="~/Areas/User/assets/images/logo/icon-gift.190935e4.png" alt="">
+                                0 Star
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="line-default"></div>
+    <div class="container-fluid">
+        <div class="row choose-area">
+            <div class="col-md-2 col-item1"></div>
+            <div class="col-md-8 col-item2">
+                <div class="row align-items-center">
+                    <div class="col-md navbar-item navbar-colored" id="navbar-item-1">Chọn phim / Suất</div>
+                    <div class="col-md navbar-item navbar-colored" id="navbar-item-2" style="padding-left: 5rem ;">Chọn ghế</div>
+                    <div class="col-md navbar-item navbar-colored" id="navbar-item-3" style="padding-left: 4rem;">Thanh toán</div>
+                    <div class="col-md navbar-item navbar-colored" id="navbar-item-4" style="padding-left: 4rem;">Xác nhận</div>
+                </div>
+            </div>
+            <div class="col-md-2 col-item3"></div>
+        </div>
+        <div class="content ">
+            <div class="block_ticket-center">
+                <div class="block">
+                    <div class="text-center">
+                        <img src="~/assets/images/payment/icon-rules.9c822007.png" alt="" style="width: 80px; height: 80px;">
+                        <h4>Xác nhận mua vé thành công!</h4>
+                        <p>Thông tin đặt vé của bạn sẽ được gởi qua email theo thông tin bạn đã cung cấp trước đó. Vui lòng kiểm tra email(kể cả hộp thư rác - Spam / Junk Box) và tin nhắn.</p>
+                        <p>
+                            Trường hợp quý khách không nhận được tin nhắn, vui lòng liên hệ email
+                            <a class="mail" href="mailto:service.ohayoucinema@gmail.com">service.ohayoucinema@gmail.com</a>
+                            Ohayou Cinema mong quý khách thông cảm vì sự bất tiện này
+                        </p>
+                        <a class="back align-items-center" href="/User/UserHome">Quay về trang chủ</a>
+                    </div>
+                </div>
+            </div>
+            <h3 class="slogan">ĐẶT VÉ ONLINE - KHÔNG LO TRỄ NẢI</h3>
+        </div>
+    </div>
+
+    <script src="~/Areas/User/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Areas/User/assets/js/profilescript.js"></script>
 </body>
 </html>
+
+<script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
