--- a/FE_Q/assets/css/moviedetailstyle.css
+++ b/FE_Q/assets/css/moviedetailstyle.css
@@ -553,7 +553,7 @@
     font-size: .875rem;
     margin-top: .5rem;
 }
-.show{
+.schedule-box .show{
     margin-top: 50px;
 }
 
@@ -656,4 +656,124 @@
 .modal{
     margin-top: 0;
     
+}
+
+/*rating*/
+
+.modal-area .modal-content{
+    height:540px ;
+    width: 380px;
+    border-top: solid 8px #f58020;
+    
+}
+
+.modal-area h1{
+    font-size: 1.125rem;
+    text-align: center;
+    margin-top: 1rem;
+    font-family: Nunito Sans, sans-serif;
+    color: #4a4a4a;
+    font-weight: 600;
+    margin-bottom: 1.25rem;
+
+}
+
+.rate{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    border: 1px solid rgb(62 128 201);
+    border-radius: 100%;
+    height: 120px;
+}
+
+.circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.vote {
+    margin-top: 10px;
+    font-size: 12px;
+}
+
+.star-list{
+    list-style: none;
+    padding: 0;
+  
+   
+}
+
+.star{
+    display: inline-block;
+
+}
+
+.star-rating{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.star:hover{
+    cursor: pointer;
+    
+}
+.star:hover svg path {
+    fill: #ffad0d;
+}
+
+.star-active s{
+    fill: #ffad0d;
+}
+
+.close{
+    width: 100%;
+    height:40px;
+    font-size: .875rem;
+    box-sizing: border-box;
+    border: 0 solid #e5e7eb;
+    font-family: Nunito Sans, sans-serif !important;
+}
+
+.confirm{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(248 172 110);
+    box-sizing: border-box;
+    border: 0 solid #e5e7eb;
+    font-size: .875rem;
+    color: white;
+    transition-duration: .5s;
+    font-family: Nunito Sans, sans-serif !important;
+}
+
+.confirm-active{
+    cursor: pointer;
+    background-color: (245 128 32);
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: 0 solid #e5e7eb;
+    font-size: .875rem;
+    color: white;
+    font-family: Nunito Sans, sans-serif !important;
+}
+.confirm:not(:disabled){
+    cursor: auto;
+}
+.btn-item1{
+    padding-right: 0;
+   
+}
+
+.btn-item2{
+    padding-left: 0;
 }
