--- a/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -57,7 +57,7 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
-                                <li><a href="#">Diễn viên</a></li>
+                                <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
                                 <li><a href="#">Đạo diễn</a></li>
                                 <li><a href="#">Bình luận phim</a></li>
                             </ul>
