--- a/Areas/User/assets/css/profilestyle.css
+++ b/Areas/User/assets/css/profilestyle.css
@@ -188,6 +188,17 @@
     position: relative;
 }
 
+.account-list li {
+    border-radius: 0;
+    transition: all 0.3s ease;
+}
+
+    .account-list li:hover {
+        transition: all 0.3s ease;
+        background-color: #fb770b1a;
+        border-left: 4px solid #F26B38;
+    }
+
 .account-list li:hover a {
     color: #F26B38;
 }
