--- a/Areas/User/assets/css/actordetailstyle.css
+++ b/Areas/User/assets/css/actordetailstyle.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
@@ -9,11 +7,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.buyticket-area {
+.header {
+    background-color: #fff;
 }
 
 .buyticket-btn {
-    font-size: 15px;
+    font-size: 20px;
     color: #fff;
     border: none;
 }
@@ -23,11 +22,9 @@
     height: auto;
 }
 
-
-/* List */
 .list-group-horizontal {
     border: none;
-    /* margin-left: -30px; */
+    margin-left: -30px;
     cursor: pointer;
 }
 
@@ -65,7 +62,7 @@
     top: calc(100% + 0.5px);
     left: -35px;
     position: absolute;
-    z-index: 2;
+    z-index: 4;
     background-color: #fff;
     line-height: 2.4;
     list-style-type: none;
@@ -82,15 +79,11 @@
             border-left: 4px solid;
         }
 
-.sub-movie-list1 {
-    padding-bottom: 1rem;
-}
-
-.movie-area a,
-.sub-list-gr-1 a {
-    text-decoration: none;
-    color: #000;
-}
+    .movie-area a,
+    .sub-list-gr-1 a {
+        text-decoration: none;
+        color: #000;
+    }
 
 .movie-area:hover .movie-status,
 .cinema-corner:hover .sub-list-gr-1,
@@ -109,7 +102,6 @@
     font-size: 8px;
 }
 
-/* Movie-List */
 .movie-status {
     display: none;
     padding: 10px 20px;
@@ -117,14 +109,10 @@
     top: calc(100% + 0.5px);
     left: -30px;
     position: absolute;
-    z-index: 4;
+    z-index: 2;
     background-color: #fff;
     list-style-type: none;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.movie-list .col-md-3 {
-    position: relative;
 }
 
 .movie-list a {
@@ -133,9 +121,14 @@
     font-weight: 500;
 }
 
+.movie-list .col-md-3 {
+    position: relative;
+}
+
 .img-movie {
     margin-bottom: 10px;
     border-radius: 8px;
+    transition: filter 0.3s ease;
 }
 
 .ti-ticket {
@@ -177,13 +170,11 @@
 .search-btn {
     border: none;
     padding-right: 0px;
-    padding-right: 0px;
     margin-right: 0px;
     color: #777777;
     margin-left: 70px;
 }
 
-/* Login */
 .login-area {
     display: flex;
 }
@@ -197,6 +188,16 @@
     position: relative;
 }
 
+.account-list li {
+    border-radius: 0;
+    transition: all 0.3s ease;
+}
+
+    .account-list li:hover {
+        background-color: #fb770b1a;
+        border-left: 4px solid #F26B38;
+    }
+
 .account-list li:hover a {
     color: #F26B38;
 }
@@ -206,17 +207,6 @@
     color: #000;
     font-size: 14px;
 }
-
-.account-list li {
-    transition: all 0.3s ease;
-    border-radius: 0;
-}
-
-    .account-list li:hover {
-        transition: all 0.3s ease;
-        background-color: #fb770b1a;
-        border-left: 4px solid #F26B38;
-    }
 
 .account-list {
     display: none;
@@ -235,6 +225,7 @@
 .account-img {
     width: 75px;
     height: auto;
+    height: auto;
     padding: 10px 20px;
 }
 
@@ -252,7 +243,12 @@
     margin-right: 5px;
 }
 
-/*content*/
+.wrapper {
+    padding-top: 4rem;
+}
+
+/*right*/
+
 .text {
     font-size: 1rem;
     font-weight: 700;
@@ -265,143 +261,6 @@
     margin-bottom: 25px;
 }
 
-.option {
-    border-bottom: 2px solid #034ea2;
-}
-
-.btn-option {
-    background-color: #fff;
-    font-size: .875rem;
-    font-weight: 400;
-    border: 1px solid #e5e7eb;
-    border-radius: .25rem;
-    width: 150px;
-    height: 40px;
-    color: #4a4a4a;
-    width: 100%;
-}
-
-    .btn-option:hover {
-        --tw-border-opacity: 1;
-        border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    }
-
-.dropdown-menu {
-    width: 11rem;
-}
-
-.dropdown-item {
-    font-size: .875rem;
-    font-weight: 400;
-    color: inherit;
-    font-family: Nunito Sans, sans-serif;
-}
-
-    .dropdown-item:hover {
-        background-color: #c6e7ff;
-    }
-
-.active {
-    box-shadow: #c6e7ff;
-    --tw-border-opacity: 1;
-    border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    background-color: #fff;
-    font-size: .875rem;
-    font-weight: 400;
-    border-radius: .25rem;
-    width: 150px;
-    height: 40px;
-    color: #4a4a4a;
-}
-
-.line-default {
-    border-bottom: 6px solid #f4f4f4;
-}
-
-.wrapper {
-    padding-top: 28px;
-}
-
-.item {
-    padding-bottom: 20px;
-    font-family: Nunito Sans, sans-serif;
-}
-
-/*.movie-list {
-    margin-top: 32px;
-}*/
-
-.post-list {
-    list-style: none;
-    margin-top: 2rem;
-    padding-left: 0;
-    margin-bottom: 4rem;
-}
-
-.poster {
-    width: 100%;
-    box-sizing: border-box;
-    border: 0 solid #e5e7eb;
-    border-radius: 5px;
-}
-
-.img-link {
-    display: inline-block;
-}
-
-.like-btn {
-    padding: 0;
-    width: 75px;
-    height: 24px;
-    background-color: #4d88ff;
-    font-size: .625rem;
-    border-radius: .25rem;
-    border: 1px solid #4080ff;
-    color: white;
-}
-
-    .like-btn:hover {
-        cursor: pointer;
-        background-color: #034ea2;
-    }
-
-.view-btn {
-    font-size: .625rem;
-    border-radius: .25rem;
-    text-transform: none;
-    font-weight: inherit;
-    color: inherit;
-    width: 90px;
-    height: 24px;
-    border: 1px solid rgb(233 237 241);
-}
-
-.mvname {
-    font-style: normal;
-    text-decoration: none;
-    --tw-text-opacity: 1;
-    color: rgb(51 51 51 / var(--tw-text-opacity));
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-}
-
-.des-text {
-    font-size: small;
-    font-weight: 400;
-    font-family: Nunito Sans, sans-serif;
-    color: #4a4a4a;
-}
-
-.description {
-    margin-top: 10px;
-}
-
-.movie {
-    margin-bottom: 10px;
-}
-
-/*right*/
 .text-right {
     font-size: 1.25rem;
     font-weight: 600;
@@ -409,7 +268,7 @@
     border-left: solid;
     --tw-border-opacity: 1;
     border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    border-width: 5px;
+    border-width: .25rem;
     padding-left: 5px;
     margin-bottom: 25px;
     margin-top: 25px;
@@ -444,7 +303,7 @@
     }
 
 .right .img-movie {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     transition: filter 0.3s ease;
 }
 
@@ -470,11 +329,6 @@
     border-width: 1px;
 }
 
-.playing-movie {
-    display: flex;
-    justify-content: center;
-}
-
 .new-mv a {
     color: #f29538;
     text-decoration: none;
@@ -491,6 +345,167 @@
         color: #fff;
     }
 
+.line-default {
+    border-bottom: 6px solid #f4f4f4;
+}
+/*left*/
+
+.poster img {
+    width: 16rem;
+    height: 24rem;
+    border-radius: 5px;
+}
+
+.option a {
+    --tw-text-opacity: 1;
+    color: rgb(119 119 119 / var(--tw-text-opacity));
+    text-decoration: none;
+    font-size: .875rem;
+    font-weight: 400;
+    font-family: Nunito Sans, sans-serif;
+}
+
+    .option a:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+.ot-item {
+    list-style: none;
+    display: inline-block;
+}
+
+.option .name {
+    list-style: none;
+    display: inline-block;
+    --tw-text-opacity: 1;
+    color: rgb(119 119 119 / var(--tw-text-opacity));
+    text-decoration: none;
+    font-size: .875rem;
+    font-weight: 400;
+    font-family: Nunito Sans, sans-serif;
+    color: #4a4a4a;
+}
+
+.infor {
+    padding-left: 0;
+}
+
+.option {
+    padding-left: 10px;
+}
+
+.actor-name {
+    font-weight: 600;
+    font-size: 1.75rem;
+    padding-bottom: 2rem;
+    padding-left: 10px;
+}
+
+.like-btn {
+    padding: 0;
+    width: 75px;
+    height: 24px;
+    background-color: #4d88ff;
+    font-size: .625rem;
+    border-radius: .25rem;
+    border: 1px solid #4080ff;
+    color: white;
+    margin-right: 10px;
+}
+
+    .like-btn:hover {
+        cursor: pointer;
+        background-color: #034ea2;
+    }
+
+.view-btn {
+    font-size: .625rem;
+    border-radius: .25rem;
+    text-transform: none;
+    font-weight: inherit;
+    color: inherit;
+    width: 90px;
+    height: 24px;
+    border: 1px solid rgb(233 237 241);
+}
+
+.review {
+    font-size: small;
+    font-family: Nunito Sans, sans-serif;
+    font-weight: 500;
+    font-style: italic;
+}
+
+.actor-rating {
+    padding-bottom: 2rem;
+    padding-left: 10px;
+}
+
+.review p {
+    padding-left: 0;
+    margin-bottom: 2rem;
+    padding-left: 10px;
+}
+
+.d {
+    font-size: .875rem;
+    font-weight: 400;
+    --tw-text-opacity: 1;
+    color: rgb(119 119 119 / var(--tw-text-opacity));
+    margin-right: 0;
+    padding-top: 0px;
+    font-family: Nunito Sans, sans-serif;
+    padding-left: 10px;
+}
+
+.nation p {
+    --tw-text-opacity: 1;
+    color: rgb(51 51 51 / var(--tw-text-opacity));
+    font-weight: 500;
+    font-size: .875rem;
+}
+
+.img img {
+    width: 12.5rem;
+    height: 9rem;
+    border-radius: .25rem;
+}
+
+.mv-poster img {
+    width: 8rem;
+    height: 5rem;
+    border-radius: .25rem;
+}
+
+.mv-name a {
+    text-decoration: none;
+    font-size: .875rem;
+    font-weight: 500;
+    color: #000;
+}
+
+.status {
+    font-size: .875rem;
+    font-weight: 600;
+    color: #000;
+}
+
+.mv-name p {
+    margin-bottom: .5rem;
+}
+
+.item {
+    margin-bottom: 1rem;
+}
+
+.story p {
+    font-size: 14px;
+    font-weight: 400;
+    font-family: Nunito Sans, sans-serif;
+    color: #4a4a4a;
+}
+
 .galaxy p {
     font-size: small;
     font-weight: 400;
@@ -502,22 +517,3 @@
     margin-top: 3rem;
     margin-bottom: 10rem;
 }
-
-.movie-error {
-    margin-top: 4rem;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-}
-
-    .movie-error span {
-        font-size: 15px;
-        font-style: italic;
-        display: flex;
-        justify-content: center;
-    }
-
-    .movie-error img {
-        width: 110px;
-        height: auto;
-    }
