--- a/Areas/User/assets/css/actorstyle.css
+++ b/Areas/User/assets/css/actorstyle.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
@@ -9,11 +7,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.buyticket-area {
+.header {
+    background-color: #fff;
 }
 
 .buyticket-btn {
-    font-size: 15px;
+    font-size: 20px;
     color: #fff;
     border: none;
 }
@@ -23,11 +22,9 @@
     height: auto;
 }
 
-
-/* List */
 .list-group-horizontal {
     border: none;
-    /* margin-left: -30px; */
+    margin-left: -30px;
     cursor: pointer;
 }
 
@@ -65,7 +62,7 @@
     top: calc(100% + 0.5px);
     left: -35px;
     position: absolute;
-    z-index: 2;
+    z-index: 4;
     background-color: #fff;
     line-height: 2.4;
     list-style-type: none;
@@ -82,15 +79,11 @@
             border-left: 4px solid;
         }
 
-.sub-movie-list1 {
-    padding-bottom: 1rem;
-}
-
-.movie-area a,
-.sub-list-gr-1 a {
-    text-decoration: none;
-    color: #000;
-}
+    .movie-area a,
+    .sub-list-gr-1 a {
+        text-decoration: none;
+        color: #000;
+    }
 
 .movie-area:hover .movie-status,
 .cinema-corner:hover .sub-list-gr-1,
@@ -109,7 +102,6 @@
     font-size: 8px;
 }
 
-/* Movie-List */
 .movie-status {
     display: none;
     padding: 10px 20px;
@@ -117,14 +109,10 @@
     top: calc(100% + 0.5px);
     left: -30px;
     position: absolute;
-    z-index: 4;
+    z-index: 2;
     background-color: #fff;
     list-style-type: none;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.movie-list .col-md-3 {
-    position: relative;
 }
 
 .movie-list a {
@@ -133,9 +121,14 @@
     font-weight: 500;
 }
 
+.movie-list .col-md-3 {
+    position: relative;
+}
+
 .img-movie {
     margin-bottom: 10px;
     border-radius: 8px;
+    transition: filter 0.3s ease;
 }
 
 .ti-ticket {
@@ -177,13 +170,11 @@
 .search-btn {
     border: none;
     padding-right: 0px;
-    padding-right: 0px;
     margin-right: 0px;
     color: #777777;
     margin-left: 70px;
 }
 
-/* Login */
 .login-area {
     display: flex;
 }
@@ -208,8 +199,8 @@
 }
 
 .account-list li {
-    transition: all 0.3s ease;
     border-radius: 0;
+    transition: all 0.3s ease;
 }
 
     .account-list li:hover {
@@ -235,6 +226,7 @@
 .account-img {
     width: 75px;
     height: auto;
+    height: auto;
     padding: 10px 20px;
 }
 
@@ -253,23 +245,22 @@
 }
 
 /*content*/
-.text {
+.text{
     font-size: 1rem;
     font-weight: 700;
     display: inline-block;
-    border-left: solid;
+    border-left :solid;
     --tw-border-opacity: 1;
     border-color: rgb(3 78 162 / var(--tw-border-opacity));
     border-width: 5px;
     padding-left: 5px;
     margin-bottom: 25px;
 }
-
-.option {
+.option{
     border-bottom: 2px solid #034ea2;
 }
 
-.btn-option {
+.btn-option{
     background-color: #fff;
     font-size: .875rem;
     font-weight: 400;
@@ -278,30 +269,23 @@
     width: 150px;
     height: 40px;
     color: #4a4a4a;
-    width: 100%;
+   
 }
-
-    .btn-option:hover {
-        --tw-border-opacity: 1;
-        border-color: rgb(3 78 162 / var(--tw-border-opacity));
-    }
-
-.dropdown-menu {
-    width: 11rem;
+.btn-option:hover{
+    --tw-border-opacity: 1;
+    border-color: rgb(3 78 162 / var(--tw-border-opacity));
 }
-
 .dropdown-item {
     font-size: .875rem;
     font-weight: 400;
     color: inherit;
-    font-family: Nunito Sans, sans-serif;
+    font-family: Nunito Sans, sans-serif ;
+}
+.dropdown-item:hover{
+    background-color: #c6e7ff;
 }
 
-    .dropdown-item:hover {
-        background-color: #c6e7ff;
-    }
-
-.active {
+.active{
     box-shadow: #c6e7ff;
     --tw-border-opacity: 1;
     border-color: rgb(3 78 162 / var(--tw-border-opacity));
@@ -313,59 +297,50 @@
     height: 40px;
     color: #4a4a4a;
 }
-
 .line-default {
     border-bottom: 6px solid #f4f4f4;
+   
 }
-
-.wrapper {
+.wrapper{
     padding-top: 28px;
 }
-
-.item {
+.item{
     padding-bottom: 20px;
     font-family: Nunito Sans, sans-serif;
 }
 
-/*.movie-list {
-    margin-top: 32px;
-}*/
-
-.post-list {
+.post-list{
     list-style: none;
     margin-top: 2rem;
     padding-left: 0;
     margin-bottom: 4rem;
 }
-
-.poster {
+.poster
+{
     width: 100%;
     box-sizing: border-box;
     border: 0 solid #e5e7eb;
     border-radius: 5px;
 }
 
-.img-link {
+.img-link{
     display: inline-block;
 }
-
-.like-btn {
-    padding: 0;
-    width: 75px;
+.like-btn{
+    padding: 0; 
+    width: 75px; 
     height: 24px;
-    background-color: #4d88ff;
+    background-color:#4d88ff; 
     font-size: .625rem;
     border-radius: .25rem;
-    border: 1px solid #4080ff;
+    border: 1px solid #4080ff;  
     color: white;
 }
-
-    .like-btn:hover {
-        cursor: pointer;
-        background-color: #034ea2;
-    }
-
-.view-btn {
+.like-btn:hover{
+    cursor: pointer;
+    background-color: #034ea2;
+}
+.view-btn{
     font-size: .625rem;
     border-radius: .25rem;
     text-transform: none;
@@ -375,8 +350,7 @@
     height: 24px;
     border: 1px solid rgb(233 237 241);
 }
-
-.mvname {
+.actorname{
     font-style: normal;
     text-decoration: none;
     --tw-text-opacity: 1;
@@ -384,29 +358,28 @@
     font-weight: 500;
     font-size: 1.125rem;
     line-height: 1.75rem;
-}
 
-.des-text {
+}
+.des-text{
     font-size: small;
     font-weight: 400;
     font-family: Nunito Sans, sans-serif;
     color: #4a4a4a;
 }
 
-.description {
+.description{
     margin-top: 10px;
 }
-
-.movie {
+.movie{
     margin-bottom: 10px;
 }
 
 /*right*/
-.text-right {
+.text-right{
     font-size: 1.25rem;
     font-weight: 600;
     display: inline-block;
-    border-left: solid;
+    border-left :solid;
     --tw-border-opacity: 1;
     border-color: rgb(3 78 162 / var(--tw-border-opacity));
     border-width: 5px;
@@ -419,49 +392,47 @@
 .right .buy-ticket-btn {
     display: none;
     border: none;
-    width: 120px;
+    width: 120px; 
     height: 35px;
     background-color: #F26B38;
     color: #fff;
     position: absolute;
-    top: 43%;
-    left: 50%;
+    top: 43%; 
+    left: 50%; 
     transform: translate(-50%, -50%);
 }
 
-    .right .buy-ticket-btn:hover ~ .img-movie,
-    .right .img-movie:hover {
-        filter: brightness(65%);
-    }
+.right .buy-ticket-btn:hover ~ .img-movie,
+.right .img-movie:hover {
+    filter: brightness(65%); 
+}
 
-        .right .img-movie:hover + .buy-ticket-btn,
-        .right .buy-ticket-btn:hover {
-            display: block;
-        }
+.right .img-movie:hover + .buy-ticket-btn,
+.right .buy-ticket-btn:hover {
+    display: block;
+}
 
-    .right .buy-ticket-btn:hover {
-        background-color: #f29538;
-    }
+.right .buy-ticket-btn:hover {
+    background-color: #f29538;
+}
 
 .right .img-movie {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     transition: filter 0.3s ease;
 }
 
-.right .mv {
+.right .mv{
     position: relative;
     margin-bottom: 20px;
 }
-
-    .right .mv a {
-        font-style: normal;
-        font-weight: 600;
-        font-size: .875rem;
-        color: inherit;
-        text-decoration: inherit;
-    }
-
-.right .bonus .new-mv {
+.right .mv a{
+    font-style: normal;
+    font-weight: 600;
+    font-size: .875rem;
+    color: inherit;
+    text-decoration: inherit;
+}
+.right .bonus .new-mv{
     width: 150px;
     height: 40px;
     border-radius: .25rem;
@@ -469,55 +440,46 @@
     border-color: #f29538;
     border-width: 1px;
 }
-
-.playing-movie {
-    display: flex;
-    justify-content: center;
-}
-
-.new-mv a {
+.new-mv a{
     color: #f29538;
     text-decoration: none;
     font-size: .875rem;
     text-align: center;
 }
-
-.right .bonus .new-mv:hover {
+.right .bonus .new-mv:hover{
     cursor: pointer;
     background-color: #f29538;
 }
 
-    .right .bonus .new-mv:hover a {
-        color: #fff;
-    }
-
-.galaxy p {
+.right .bonus .new-mv:hover a{
+    color: #fff;
+}
+.galaxy p{
     font-size: small;
     font-weight: 400;
     font-family: Nunito Sans, sans-serif;
     color: #4a4a4a;
 }
-
-.galaxy {
+.galaxy{
     margin-top: 3rem;
     margin-bottom: 10rem;
 }
 
-.movie-error {
+.actor-error {
     margin-top: 4rem;
     justify-content: center;
     display: flex;
     align-items: center;
 }
 
-    .movie-error span {
+    .actor-error span {
         font-size: 15px;
         font-style: italic;
         display: flex;
         justify-content: center;
     }
 
-    .movie-error img {
+    .actor-error img {
         width: 110px;
         height: auto;
     }
