--- a/Views/Shared/_LayoutPage1.cshtml
+++ b/Views/Shared/_LayoutPage1.cshtml
@@ -7,7 +7,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="~/assets/css/layout.css">
+    <link rel="stylesheet" href="~/assets/css/layout.css?v=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -192,12 +192,12 @@
             </ul>
             <div class="tab-content">
                 <div class="movie-list tab-pane active" id="playing" role="tabpanel">
-                    <div class="row">
+                    <div class="row" style="margin: 0 1rem">
                         @RenderSection("AllPhimdangchieu", required: false)
                     </div>
                 </div>
                 <div class="movie-list tab-pane" id="coming" role="tabpanel">
-                    <div class="row">
+                    <div class="row" style="margin: 0 1rem">
                         @RenderSection("AllPhimsapchieu", required: false)
                     </div>
                 </div>
