--- a/Areas/User/assets/css/moviedetail.css
+++ b/Areas/User/assets/css/moviedetail.css
@@ -343,6 +343,8 @@
     font-size: 20px;
     text-decoration: none;
     color: #000;
+    align-items: center;
+    display: flex;
 }
 
     .rating .vote {
