--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -393,7 +393,7 @@
                                                         <div class="subform-group">
                                                             <label for="email">Email</label>
                                                             <div class="subform non-click">
-                                                                <input class="un-click" type="text" placeholder="@currentUser.email">
+                                                                <input class="un-click" type="text" value="@currentUser.email">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -401,7 +401,7 @@
                                                         <div class="subform-group">
                                                             <label for="date">Date of birth</label>
                                                             <div class="subform non-click">
-                                                                <input class="un-click" type="text" placeholder="@currentUser.date_of_birth.Value.ToString("dd/MM/yyyy")">
+                                                                <input class="un-click" type="text" value="@currentUser.date_of_birth.Value.ToString("dd/MM/yyyy")">
                                                             </div>
                                                         </div>
                                                         <div class="subform-group">
